# picker

./: .editorconfig  .gitignore  README.md  io.github.mezoahmedii.Picker.json  meson.build  picker.doap  requirements-dev.txt
data/: io.github.mezoahmedii.Picker.desktop.in  io.github.mezoahmedii.Picker.gschema.xml  io.github.mezoahmedii.Picker.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  bg.po  it.po  meson.build  nl.po  oc.po  picker.pot  update.sh
src/: main.py  meson.build  picker.gresource.xml  picker.in  window.blp  window.py  window.ui
src/gtk/: help-overlay.blp
